# Practises-PJC

./: .gitignore  CMakeLists.txt  README.md
c1/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp
c10/: ex1.cpp  ex2.cpp  s24382.cpp
c11/: CMakeLists.txt  ex1.cpp  s24382.cpp
c12/: CMakeLists.txt  s24382.cpp
c13/: s24382.cpp  second.cpp  second.h
c2/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp
c3/: ex1.cpp  ex2.cpp  ex3.cpp  starter.cpp
c4/: ex1.cpp  ex2.cpp  ex3-1.cpp  ex3.cpp  s24382.cpp  starter.cpp
c5/: ex1.cpp  ex2.cpp  ex3.cpp  s24382.cpp  starter.cpp
c6/: ex1.cpp  ex2.cpp  ex3.cpp  s24382.cpp
c7/: s24382.cpp
c7-c8/: ex1.cpp  ex2.cpp  ex3.cpp
c7-c8/przykladowe/: ex1.cpp  ex2.cpp
c8/: s24382.cpp
c9/: ex1.cpp  ex2.cpp  ex3.cpp  s24382.cpp
l3/: l3.cpp
test/: test1.cpp
