cmake_minimum_required(VERSION 3.21)
project(Cwiczenia)

set(CMAKE_CXX_STANDARD 23)

add_executable(c1ex1 c1/ex1.cpp)
add_executable(c1ex2 c1/ex2.cpp)
add_executable(c1ex3 c1/ex3.cpp)
add_executable(c1ex4 c1/ex4.cpp)
add_executable(c2ex1 c2/ex1.cpp)
add_executable(c2ex2 c2/ex2.cpp)
add_executable(c2ex3 c2/ex3.cpp)
add_executable(c2ex4 c2/ex4.cpp)
add_executable(c2ex5 c2/ex5.cpp)
