cmake_minimum_required(VERSION 3.21)
project(Cwiczenia)

set(CMAKE_CXX_STANDARD 23)

add_executable(c1ex1 c1/ex1.cpp)
add_executable(c1ex2 c1/ex2.cpp)
add_executable(c1ex3 c1/ex3.cpp)
add_executable(c1ex4 c1/ex4.cpp)

add_executable(c2ex1 c2/ex1.cpp)
add_executable(c2ex2 c2/ex2.cpp)
add_executable(c2ex3 c2/ex3.cpp)
add_executable(c2ex4 c2/ex4.cpp)
add_executable(c2ex5 c2/ex5.cpp)

add_executable(c3starter c3/starter.cpp)
add_executable(c3ex1 c3/ex1.cpp)
add_executable(c3ex2 c3/ex2.cpp)
add_executable(c3ex3 c3/ex3.cpp)

add_executable(c4starter c4/s24382.cpp)
add_executable(c4ex1 c4/ex1.cpp)
add_executable(c4ex2 c4/ex2.cpp)
add_executable(c4ex3 c4/ex3.cpp)

add_executable(c5starter c5/s24382.cpp)
add_executable(c5ex1 c5/ex1.cpp)
add_executable(c5ex2 c5/ex2.cpp)
add_executable(c5ex3 c5/ex3.cpp)

add_executable(c6starter c6/s24382.cpp)
add_executable(c6ex1 c6/ex1.cpp)
add_executable(c6ex2 c6/ex2.cpp)

add_executable(test test/test1.cpp)
